src/app/style/globals.css
@font-face {
  font-family: 'Engcomica';
  src: url("../../../public/fonts/Engcomica.otf"),
}

@font-face {
  font-family: 'Walkway';
  src: url('../../../public/fonts/Walkway\ UltraBold.ttf');
}

@media screen {
  :root {
    --pink-fresh: rgb(255, 0, 102);

    --primary: var(--pink-fresh);
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 20, 0, 20;
    --title-font: 'Engcomica';
    --text-font: 'Walkway';
  }

  * {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
  }

  html,
  body {
    max-width: 100vw;
    overflow-x: hidden;
    min-height: 100vh;
  }

  body {
    color: rgb(var(--foreground-rgb));
    background: linear-gradient(
        to bottom,
        transparent,
        rgb(var(--background-end-rgb))
      )
      rgb(var(--background-start-rgb));
    font-family: 'Engcomica';
  }

  h1 {
    display: inline-block;
    font-size: 2.5rem;
    font-weight: 700;
    line-height: 1.2;
    text-shadow: var(--primary) 2px 4px 1px;
    border-radius: 5px;
    padding: 0 0.5rem;
    margin: 0.5rem 0rem;
    margin-left: 1rem;
  }

  h2 {
    font-size: 2rem;
    font-weight: 600;
    line-height: 1.75rem;
    text-align: center;
  }

  a {
    color: inherit;
    text-decoration: none;
  }

  button {
    font-family: 'Walkway';
    letter-spacing: 0.8px;
  }

  #title-container {
    display: flex;
    justify-content: center;
  }

  #screen-title {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 90vh;
    font-family: var(--text-font);
    text-align: left;
  }

  #screen-title h2 {
    text-align: left;
    color: var(--primary);
    margin-bottom: 1rem;
    font-family: 'Engcomica';
  }

  #screen-title p {
    font-size: 1.25rem;
  }

  button.game-navigation {
    border: 0;
    border-radius: 5px;
    font-size: 1.5rem;
    margin-top: 1rem;
    padding: 0.5rem;
    cursor: pointer;
    background: transparent;
    border: solid 3px var(--primary);
    color: var(--primary);
    transition: 0.2s;
  }

  button.game-navigation:hover {
    background-color: var(--primary);
    color: white;
  }

  .counter {
    margin-bottom: 2rem;
  }

  .counter span {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;
    width: 50px;
    background: var(--primary);
    border-radius: 9999px;
    margin: auto;
  }

  .glow-up {
    animation: glowUp 2s ease-in-out infinite;
  }

  #game-over {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    gap: 1rem;
  }

  .track-display {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    text-align: center;
    gap: 1rem;
  }

  .track-display img {
    border-radius: 5px 5px 0px 0px;
    max-width: 10rem;
  }

  .track-display button {
    color: white;
    border: 0;
    background-color: black;
    border-radius: 8px;
    cursor: pointer;
  }
    

  .track-display button p {
    color: white;
    border-radius: 0px 0px 5px 5px;
    padding: 0.25rem;
  }

  #play-data {
    margin-left: 1rem;
    margin-bottom: 2rem;
  }

  #play-data {
    text-align: center;
  }

  #score span, #lives span {
    font-weight: 600;
    color: var(--primary);
  }

  .fail {
    animation: fail 1.5s ease-in-out 1;
  }

  .success {
    animation: switchToGreen 1.5s ease-in-out 1;
  }

  .real-track {
    animation: realTrack 1.5s ease-in-out 1;
  }

  #audio-controls {
    display: flex;
    align-items: center;
    gap: 10px;
    margin-top: 0.5rem;
  }

  #audio-controls {
    justify-content: center;
  }

  #audio-controls button {
    display: flex;
    border: none;
    border-radius: 4px;
    padding: 0.25rem;
    cursor: pointer;
  }

  @media screen and (min-width: 501px) {
    main p {
      text-align: center;
    }

    .track-display button {
      box-shadow: 0 0 8px 0px #636363;
      transition: 0.3s;
    }

    .track-display button:hover {
      box-shadow: 0 0 8px 2px var(--primary);
    }
  }

  @media screen and (max-width: 500px) {
    .track-display {
      flex-direction: column;
    }

    .track-display button {
      display: flex;
      align-items: center;
      gap: 1rem;
      text-align: left;
      color: white;
      background-color: var(--primary);
      padding: 0;
      border-radius: 5px;
      margin-right: 1rem;
      margin-left: 1rem;
      cursor: pointer;
    }

    .track-display img {
      border: solid 2px var(--primary);
      border-radius: 5px 0px 0px 5px;
      max-width: 5rem;
    }

    #screen-title, #screen-title h2 {
      text-align: center;
    }

    #screen-title div {
      margin: 0 0.5rem;
    }
  }

  @keyframes success {
    0% { border-color: green }
  }

  @keyframes realTrack {
    0% {
      opacity: 0;
    }
    25% {
      opacity: 1;
    }
    50% {
      opacity: 0;
    }
    75% {
      opacity: 1;
    }
  }

  @keyframes fail {
    0% {
      transform: translateX(0px);
      filter: brightness(0) invert(17%) sepia(91%) saturate(2957%) hue-rotate(343deg) brightness(98%) contrast(97%);
    }
    25% {
      transform: translateX(5px);
      filter: brightness(0) invert(17%) sepia(91%) saturate(2957%) hue-rotate(343deg) brightness(98%) contrast(97%);
    }
    50% {
      transform: translateX(-5px);
      filter: brightness(0) invert(17%) sepia(91%) saturate(2957%) hue-rotate(343deg) brightness(98%) contrast(97%);
    }
    75% {
      transform: translateX(5px);
      filter: brightness(0) invert(17%) sepia(91%) saturate(2957%) hue-rotate(343deg) brightness(98%) contrast(97%);
    }
    100% {
      transform: translateX(0px);
      filter: brightness(0) invert(17%) sepia(91%) saturate(2957%) hue-rotate(343deg) brightness(98%) contrast(97%);
    }
  }

  @keyframes switchToGreen {
    0% {
      filter: brightness(0) invert(69%) sepia(90%) saturate(1484%) hue-rotate(84deg) brightness(101%) contrast(105%);
    }
  }

  @keyframes glowUp {
    0% {
      box-shadow: 0 0 8px -3px var(--primary);
    }
    50% {
      box-shadow: 0 0 8px 5px white;
    }
    100% {
      box-shadow: 0 0 8px -3px var(--primary);
    }
  }
}

